# seb_to_goodbudget

./: .clinerules  README.md  pyproject.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/seb_to_goodbudget/: __init__.py  __main__.py  main.py
tests/: test_main.py
tests/fixtures/: test_input.xlsx  test_main.py
